Fix alignment of elements in About NTX for mobile devices

--- a/public_html/css/custom-sections.css
+++ b/public_html/css/custom-sections.css
@@ -894,13 +894,9 @@
   }
 
   .aboutntx-outer .right-col {
+    padding-top: 20px;
     padding-left: 15px !important;
-  }
 
-  .aboutntx-outer .right-col h4{
-    font-size: 18px;
-    margin-top: 0 !important;
-    padding: 25px 0 0 0;
   }
 }
 
